<resources>
    <string name="app_name">AppHub</string>
    <string name="development_type">Development Type</string>
    <string name="app_development">App Development</string>
    <string name="android_flutter_ios">Android | Flutter | IOS</string>
    <string name="web_development">Web Development</string>
    <string name="node_react_angular_vue">Node| React | Angular | Vue</string>
    <string name="blockchain_development">Blockchain Development</string>
    <string name="solidity_ethereum_solana">Solidity | Ethereum | Solana</string>
    <string name="continue_txt">Continue</string>
    <string name="cancel_txt">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_codify">Sign in to Codify</string>
    <string name="sign_up_to_codify">Sign up to Codify</string>
    <string name="welcome_first_str">Welcome to</string>
    <string name="welcome_second_str">Codify</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="google_icon">google_icon</string>
    <string name="appicon_content_desciption">appIcon</string>
    <string name="forgot_back_button">forgot back button</string>
    <string name="reset_password">Reset password</string>
</resources>