<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.fragment.auth.RegisterFragment">

    <ImageView
        android:id="@+id/appIconImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/appicon_content_desciption"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_education_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerTitleTv"
        style="@style/RobotTextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sign_up_to_codify"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appIconImg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTL"
        style="@style/CustomTextFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitleTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTL"
        style="@style/CustomTextFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTL"
        style="@style/CustomTextFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        style="@style/RobotTextBold"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_custom_button"
        android:backgroundTint="@color/buttonColor"
        android:padding="5dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/passwordTL"
        tools:layout_editor_absoluteX="20dp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/registerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn">

        <com.google.android.material.textview.MaterialTextView
            style="@style/RobotTextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/do_you_have_an_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginLabelTv"
            style="@style/RobotTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/cardColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/orDividerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@id/registerContainer">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="@color/lightGray" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/RobotTextRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="@color/lightGray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/socialAuthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_social_button"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/orDividerContainer"

        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/google_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_google_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/RobotTextMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up_with_google"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appIconImg" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>