<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/development_type"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:gravity="center"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/appDevBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/un_selected_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_development"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_flutter_ios"
                android:textSize="15sp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/webDevBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/un_selected_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web_development"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/node_react_angular_vue"
                android:textSize="15sp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/blockchainDevBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/un_selected_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blockchain_development"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solidity_ethereum_solana"
                android:textSize="15sp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/continue_txt"
        android:alpha="0"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/selected_btn_color"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/cancel_txt"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/un_selected_btn_color"
        />

</androidx.appcompat.widget.LinearLayoutCompat>