<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.fragment.auth.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/forgotBackButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/forgot_back_button"
        android:scaleType="centerCrop"
        android:src="@drawable/left_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appIconImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/appicon_content_desciption"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_education_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotBackButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginTitleTv"
        style="@style/RobotTextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter your email to reset password"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appIconImg" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTL"
        style="@style/CustomTextFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitleTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPasswordButton"
        style="@style/RobotTextBold"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:alpha="0.6"
        android:background="@drawable/rounded_custom_button"
        android:backgroundTint="@color/buttonColor"
        android:padding="5dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/emailTL"
        tools:layout_editor_absoluteX="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>